--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,10 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  @apply transition-colors duration-300;
+  /* @apply transition-colors duration-300; */
+}
+.slow{
+  @apply transition-colors duration-500;
 }
 
 @layer components {
