products page updated

--- a/src/index.css
+++ b/src/index.css
@@ -120,3 +120,7 @@
     /* animation-timing-function: cubic-bezier(0, 0, 0.2, 1); */
   }
 }
+
+.transition-height {
+  transition: height 0.3s ease-in-out;
+}
